2007-01-06 Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,java,perl,ruby].i: Added ability to handle
	the new pluginiter.h, and in particular, its use in
	OBFingerprint.Iter. Also, regenerated all of the dependent files.

	* scripts/openbabel-python.i: Removed python code added on 2006-12-20
	to set BABEL_DATADIR as it actually had no effect.

2007-01-06 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields: Ghemical now uses SMARTS for atomtype setting.
	
	* src/forcefields: Added initial MMFF94 implementation. (uses new
	OBFFCalculation class for better performance)

	* tools/obgen.cpp: Now uses OBForceField::GenerateCoordinates().

	* data/: Added SMARTS patterns to ghemical.prm for typing. Added
	ghemical.prm to Makefile.*
	Added parameters for MMFF94 (files for validating MMFF94 not included)
	Data needs forcefield subfolder??

	* test/obmmff94validate.cpp: Validate MFF94 using the validation
	suite.
	
2007-01-05 Chris Morley <ob@gaseq.co.uk>

	* include/openbabel.residue.h: Added EXTERN macro for global 
	variables for DLL builds. (Does nothing otherwise).
	
	* Updated OpenBabelDLL project file.
	
2007-01-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/*.cpp, include/openbabel/*.h: Compiler warning fixes from
	Jean Brefort.

	* include/openbabel/residue.h, include/openbabel/generic.h: Remove
	static declarations for OBGenericDataType and residue properties.

2007-01-05 Chris Morley <ob@gaseq.co.uk>

	* include/openbabel/fingerprint.h: Give OBFingerprint a virtual
	destructor. Noel found this was why SWIG was failing.
	
2007-01-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefieldghemical.cpp: Fix typo from file
	renaming. (Can't use Tripos since that's a copyright.)

	* Makefile.in: Regenerate all Makefiles to fix build problems.

2007-01-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields: New code from Tim for MM2 and Ghemical force fields.
